Ensure content overflow of catalog.html

--- a/source/sass/blocks/additional-block.scss
+++ b/source/sass/blocks/additional-block.scss
@@ -7,7 +7,7 @@
 
   @media (min-width: $tablet-width) {
     margin-left: -40px;
-    margin-bottom: 57px;
+    margin-bottom: 58px;
     padding-left: 40px;
     padding-right: 41px;
   }
