--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -112,6 +112,7 @@
   grid-row: 1 / 2;
   width: 76px;
   margin: 0;
+  margin-top: auto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -180,7 +181,7 @@
   border-collapse: collapse;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
+    margin-top: auto;
     margin-bottom: 34px;
     width: 100%;
     font-size: 16px;
@@ -193,6 +194,8 @@
 }
 
 .card__data {
+  width: 50%;
+
   &:nth-child(2) {
     text-align: right;
     margin-left: 1px;
@@ -208,7 +211,7 @@
   grid-column: 1 / -1;
   grid-row: 3 / 4;
   display: block;
-  padding: 10px 0;
+  padding: 10px;
   margin: 0 auto;
   width: 100%;
   max-width: 400px;
@@ -233,6 +236,7 @@
   @media (min-width: $tablet-width) {
     width: 248px;
     margin: 0 auto;
+    margin-top: auto;
   }
 
   @media (min-width: $desktop-width) {
