--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -169,7 +169,7 @@
   color: $grey-600;
 
   @media (min-width: $tablet-width) {
-    width: 137px;
+    width: 139px;
     top: 10px;
     padding: 0 5px;
     font-size: 14px;
