--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -93,4 +93,10 @@
   @media (min-width: $tablet-width) {
     top: 24px;
   }
+
+  @media (min-width: $desktop-width) {
+    &--additional {
+      top: 26px;
+    }
+  }
 }
