--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto min-content auto;
+  column-gap: 15px;
   padding-top: 13px;
   padding-bottom: 17px;
   border-top: 1px solid $grey-350;
@@ -12,7 +13,7 @@
 
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: 1fr 1fr 92px;
+    grid-template-columns: 1fr 1fr 78px;
     grid-template-rows: auto auto;
     padding: 26px 38px 27px 38px;
     border-left: 1px solid $grey-350;
@@ -20,7 +21,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 1fr 1fr 81px 244px;
+    grid-template-columns: 1fr 1fr 95px 244px;
     grid-template-rows: auto;
     padding: 15px 0 16px 0;
     border-left: none;
@@ -31,6 +32,7 @@
 .item__name {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
+  align-self: center;
   margin: 0;
   margin-bottom: 13px;
   font-style: normal;
@@ -65,8 +67,8 @@
 
   @media (min-width: $tablet-width) {
     justify-self: end;
-    align-self: end;
-    margin-bottom: 23px;
+    align-self: center;
+    margin-bottom: 20px;
     font-size: 16px;
     line-height: 20px;
   }
@@ -75,9 +77,8 @@
     grid-column: 2 / 3;
     margin-bottom: 0;
     padding-top: 8px;
-    padding-left: 40px;
+    padding-left: 55px;
     justify-self: start;
-    align-self: center;
   }
 }
 
@@ -92,8 +93,8 @@
   color: $grey-600;
 
   @media (min-width: $tablet-width) {
-    align-self: end;
-    margin-bottom: 23px;
+    align-self: center;
+    margin-bottom: 20px;
     font-size: 16px;
     line-height: 20px;
   }
@@ -102,14 +103,15 @@
     grid-column: 3 / 4;
     margin-bottom: 0;
     padding-top: 8px;
-    justify-self: start;
-    align-self: center;
+    justify-self: center;
   }
 }
 
 .item__button {
+  display: block;
   grid-column: 1 / -1;
-  padding: 10px 0;
+  margin: auto 0;
+  padding: 10px;
   width: 100%;
   font-size: 16px;
   line-height: 20px;
