--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -138,7 +138,7 @@
   padding-top: 21px;
 
   @media (min-width: $tablet-width) {
-    max-width: 163px;
+    width: 163px;
     padding: 0;
   }
 }
@@ -155,8 +155,7 @@
   word-break: break-all;
 
   @media (min-width: $tablet-width) {
-    max-width: 114px;
-    margin-right: 22px;
+    max-width: 115px;
   }
 }
 
